# brokkr

./: .dockerignore  .env  .gitignore  .pre-commit-config.yaml  .yamllint-config.yml  Cargo.toml  DATAMODEL.md  DESIGN.md  LICENSE-HEADER.txt  README.md  TODO.md  metis.db  plissken.toml  redocly.yaml
crates/brokkr-agent/: Cargo.toml
crates/brokkr-agent/src/: bin.rs  broker.rs  broker_client.rs  broker_sdk.rs  broker_ws.rs  deployment_health.rs  diagnostics.rs  health.rs  k8s_client.rs  kube_events.rs  lib.rs  main.rs  metrics.rs  pod_logs.rs  poller.rs  utils.rs  webhooks.rs
crates/brokkr-agent/src/cli/: commands.rs  mod.rs
crates/brokkr-agent/src/k8s/: api.rs  mod.rs  objects.rs
crates/brokkr-agent/src/work_orders/: broker.rs  build.rs  mod.rs
crates/brokkr-agent/tests/: fixtures.rs
crates/brokkr-agent/tests/integration/: broker.rs  broker_client.rs  broker_ws.rs  deployment_health.rs  diagnostics.rs  health.rs  main.rs
crates/brokkr-broker/: Cargo.toml
crates/brokkr-broker/examples/: openapi_export.rs
crates/brokkr-broker/src/: bin.rs  db.rs  lib.rs  metrics.rs  utils.rs
crates/brokkr-broker/src/api/: agent_events.rs  agents.rs  assets.rs  auth.rs  deployment_objects.rs  mod.rs  stacks.rs
crates/brokkr-broker/src/cli/: commands.rs  mod.rs
crates/brokkr-broker/src/dal/: agent_annotations.rs  agent_events.rs  agent_generator_registrations.rs  agent_k8s_events.rs  agent_labels.rs  agent_pod_logs.rs  agent_targets.rs  agents.rs  audit_logs.rs  deployment_health.rs  deployment_objects.rs  diagnostic_requests.rs  diagnostic_results.rs  generators.rs  mod.rs  rendered_deployment_objects.rs  stack_annotations.rs  stack_labels.rs  stacks.rs  template_annotations.rs  template_labels.rs  template_targets.rs  templates.rs  webhook_deliveries.rs  webhook_subscriptions.rs  work_orders.rs
crates/brokkr-broker/src/utils/: audit.rs  background_tasks.rs  config_watcher.rs  encryption.rs  event_bus.rs  matching.rs  mod.rs  pak.rs  templating.rs
crates/brokkr-broker/src/ws/: broadcaster.rs  eviction.rs  fleet_subscribe.rs  handler.rs  mod.rs  push.rs  registry.rs  subscribe.rs
crates/brokkr-broker/tests/: fixtures.rs
crates/brokkr-broker/tests/integration/: cli.rs  main.rs
crates/brokkr-cli/: Cargo.toml
crates/brokkr-cli/src/: config.rs  main.rs
crates/brokkr-cli/tests/: cli.rs
crates/brokkr-models/: Cargo.toml  diesel.toml
crates/brokkr-models/migrations/00_common/: down.sql  up.sql
crates/brokkr-models/migrations/01_agents/: down.sql  up.sql
crates/brokkr-models/migrations/02_generators/: down.sql  up.sql
crates/brokkr-models/migrations/02_stacks/: down.sql  up.sql
crates/brokkr-models/migrations/03_deployment_objects/: down.sql  up.sql
crates/brokkr-models/migrations/03_stacks/: down.sql  up.sql
crates/brokkr-models/migrations/04_agent_events/: up.sql
crates/brokkr-models/migrations/05_agent_events/: down.sql
crates/brokkr-models/migrations/05_server_start/: down.sql  up.sql
crates/brokkr-models/migrations/06_generators/: up.sql
crates/brokkr-models/migrations/06_server_start/: down.sql  up.sql
crates/brokkr-models/migrations/07_stack_templates/: down.sql  up.sql
crates/brokkr-models/migrations/08_work_orders/: down.sql  up.sql
crates/brokkr-models/migrations/09_work_order_targeting/: down.sql  up.sql
crates/brokkr-models/migrations/10_deployment_health/: down.sql  up.sql
crates/brokkr-models/migrations/11_diagnostics/: down.sql  up.sql
crates/brokkr-models/migrations/12_work_order_errors/: down.sql  up.sql
crates/brokkr-models/migrations/13_webhooks/: down.sql  up.sql
crates/brokkr-models/migrations/14_fix_generator_cascade/: down.sql  up.sql
crates/brokkr-models/migrations/15_pak_hash_partial_indexes/: down.sql  up.sql
crates/brokkr-models/migrations/16_audit_logs/: down.sql  up.sql
crates/brokkr-models/migrations/17_soft_delete_unique_constraints/: down.sql  up.sql
crates/brokkr-models/migrations/18_agent_telemetry/: down.sql  up.sql
crates/brokkr-models/migrations/19_stack_annotations_unique/: down.sql  up.sql
crates/brokkr-models/migrations/2024-08-14-145200_base_table/: down.sql  up.sql
crates/brokkr-models/migrations/2024-08-14-145250_common/: down.sql  up.sql
crates/brokkr-models/migrations/2024-08-14-145251_stacks/: down.sql  up.sql
crates/brokkr-models/migrations/2024-08-14-190910_deployment_objects/: down.sql  up.sql
crates/brokkr-models/migrations/2024-08-14-191931_agents/: down.sql  up.sql
crates/brokkr-models/migrations/2024-08-14-192336_agent_events/: down.sql  up.sql
crates/brokkr-models/migrations/2024-08-28-230414_agent_auth/: down.sql  up.sql
crates/brokkr-models/migrations/20_agent_k8s_connectivity/: down.sql  up.sql
crates/brokkr-models/migrations/21_system_generator/: down.sql  up.sql
crates/brokkr-models/migrations/22_agent_generator_registrations/: down.sql  up.sql
crates/brokkr-models/migrations/23_backfill_generator_registrations/: down.sql  up.sql
crates/brokkr-models/src/: lib.rs  schema.rs
crates/brokkr-models/src/models/: agent_annotations.rs  agent_events.rs  agent_generator_registrations.rs  agent_k8s_events.rs  agent_labels.rs  agent_pod_logs.rs  agent_targets.rs  agents.rs  mod.rs  (+18 more)
crates/brokkr-utils/: Cargo.toml  default.toml
crates/brokkr-utils/src/: config.rs  lib.rs  logging.rs  telemetry.rs
crates/brokkr-utils/tests/: functional.rs  integration.rs
crates/brokkr-web/: .gitignore  Cargo.toml  index.html
crates/brokkr-web/design/: BrokkrMonitor.dc.html  README.md
crates/brokkr-web/src/: api.rs  app.rs  components.rs  main.rs  models.rs
crates/brokkr-web/web-e2e/: .gitignore  package-lock.json  package.json  shots.mjs
crates/brokkr-wire/: Cargo.toml
crates/brokkr-wire/src/: lib.rs
crates/brokkr-wire/tests/: golden.rs
tests/e2e/: Cargo.toml
tests/e2e/src/: api.rs  main.rs  scenarios.rs
tests/sdk-contract/python/: conftest.py  pyproject.toml  test_manifest_apply.py  test_telemetry_and_ws.py  test_uat_walkthrough.py
tests/sdk-contract/rust/: Cargo.toml
tools/ws-loadtest/: Cargo.toml  README.md
tools/ws-loadtest/src/: main.rs
(+1159 files in other folders)
