[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
diesel = { version = "2.0.0", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenv = "0.15.0"
sha2 = "0.10.6"

[workspace.dev-dependencies]
env_logger = "^0.9.0"
diesel_logger = "^0.3"
log = "^0.4.14"
url = {version = "^2.4.0"}
diesel_migrations = "2.1.0"
