[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.dependencies]
    axum = { version = "0.7.5", features = [] }
    chrono = { version = "0.4", features = ["serde"] }
    config = { version = "0.13.1", features = [] }
    clap = { version = "4.5.17" }
    diesel = { version = "2.0.0", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2"] }
    diesel-derive-enum = { version = "2.0", features = ["postgres"] }
    diesel_logger = { version = "0.3", features = [] }
    diesel_migrations = { version = "2.0", features = ["postgres"] }
    dotenv = { version = "0.15.0", features = [] }
    env_logger = { version = "0.9.0", features = [] }
    hyper = { version = "1.4.1", features = ["full"] }
    log = { version = "0.4.14", features = [] }
    once_cell = { version = "1.19.0", features = [] }
    prefixed-api-key = { version = "0.3.0", features = ["sha2"] }
    postgres = { version = "0.19", features = [] }
    r2d2 = { version = "0.8", features = [] }
    r2d2_postgres = { version = "0.18", features = [] }
    rand = { version = "0.8", features = [] }
    rand_core = { version = "0.6", features = [] }
    serde = { version = "1.0", features = ["derive"] }
    serde_json = { version = "1.0", features = [] }
    serde_yaml = { version = "0.9.34", features = [] }
    sha2 = { version = "0.10.6", features = [] }
    tempfile = { version = "3.2", features = [] }
    tokio = { version = "1.39.3", features = ["full", "test-util"] }
    tower = { version = "0.5.0", features = ["util"] }
    tower-http = { version = "0.5.0", features = ["util"] }
    url = { version = "2.4.0", features = [] }
    uuid = { version = "1.3", features = ["v4", "serde"] }
