[workspace]
members = [ "crates/*"]
resolver = "2"
edition = "2024"
rust-version = "1.8"

[workspace.dependencies]
# OpenAPI dependencies
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0.0", features = ["axum"] }
utoipa-axum = { version = "0.1.4" }

# External dependencies
aquamarine = { version = "0.1.0" }
axum = { version = "0.7.5", features = [] }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5.17", features = ["env"] }
config = { version = "0.13.1", features = [] }
diesel = { version = "2.0.0", features = ["postgres", "uuid", "chrono", "serde_json", "r2d2"] }
diesel-derive-enum = { version = "2.0", features = ["postgres"] }
diesel_logger = { version = "0.3", features = [] }
diesel_migrations = { version = "2.0", features = ["postgres"] }
dotenv = { version = "0.15.0", features = [] }
env_logger = { version = "0.9.0", features = [] }
hyper = { version = "1.4.1", features = ["full"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = { version = "0.95.0", features = ["client"] }
log = { version = "0.4.14", features = [] }
once_cell = { version = "1.19.0", features = [] }
postgres = { version = "0.19", features = [] }
prefixed-api-key = { version = "0.3.0", features = ["sha2"] }
prometheus = { version = "0.13", features = [] }
r2d2 = { version = "0.8", features = [] }
r2d2_postgres = { version = "0.18", features = [] }
rand = { version = "0.8", features = [] }
rand_core = { version = "0.6", features = [] }
reqwest = { version = "0.11", features = ["json"] }
serial_test = { version = "3.2.0" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }
serde_yaml = { version = "0.9.34", features = [] }
sha2 = { version = "0.10.6", features = [] }
tempfile = { version = "3.2", features = [] }
tokio = { version = "1.39.3", features = ["full", "test-util"] }
tower = { version = "0.5.0", features = ["util"] }
tower-http = { version = "0.5.0", features = ["util", "cors"] }
url = { version = "2.4.0", features = [] }
uuid = { version = "1.3", features = ["v4", "serde"] }

# Templating dependencies
tera = { version = "1.20", features = [] }
jsonschema = { version = "0.18", features = [] }
