[package]
name = "brokkr-agent"
version = "0.0.0"
edition = "2021"

[lib]
name = "brokkr_agent"
path = "src/lib.rs"

[[bin]]
name = "brokkr_agent"
path = "src/bin.rs"

[dependencies]
brokkr-broker = { path = "../brokkr-broker" }
brokkr-models = { path = "../brokkr-models" }
brokkr-utils = { path = "../brokkr-utils" }
axum = { workspace = true }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
kube = { version = "0.95.0" , features = ["client"] }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = {workspace =  true}
uuid = { workspace = true }

[dev-dependencies]
tokio = { workspace = true }
once_cell = "1.18.0"