[package]
name = "brokkr-agent"
version = "0.0.0"
edition = "2021"

[lib]
name = "brokkr_agent"
path = "src/lib.rs"

[[bin]]
name = "brokkr-agent"
path = "src/bin.rs"

[dependencies]
# Internal crates
brokkr-broker = { path = "../brokkr-broker" }
brokkr-models = { path = "../brokkr-models" }
brokkr-utils = { path = "../brokkr-utils" }

# External dependencies
aquamarine = { workspace = true }
axum = { workspace = true }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
chrono = { workspace = true }
clap = { workspace = true }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = { version = "0.95.0", features = ["client"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
once_cell = { workspace = true }
serial_test = "3.2.0"
tokio = { workspace = true }
