[package]
name = "brokkr-agent"
version = "0.6.0"
edition.workspace = true
rust-version.workspace = true

[lib]
name = "brokkr_agent"
path = "src/lib.rs"

[[bin]]
name = "brokkr-agent"
path = "src/bin.rs"

[dependencies]
# Internal crates
brokkr-broker = { path = "../brokkr-broker" }
brokkr-client = { path = "../brokkr-client" }
brokkr-models = { path = "../brokkr-models" }
brokkr-utils = { path = "../brokkr-utils" }
brokkr-wire = { path = "../brokkr-wire" }

# External dependencies
aquamarine = { workspace = true }
axum = { workspace = true }
backoff = { version = "0.4.0", features = ["futures", "tokio"] }
chrono = { workspace = true }
clap = { workspace = true }
k8s-openapi = { version = "0.23.0", features = ["latest"] }
kube = { version = "0.95.0", features = ["client"] }
lru = "0.12"
prometheus = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = "0.24"
tokio-util = { version = "0.7", features = ["compat"] }
futures = "0.3"
rand = { workspace = true }
uuid = { workspace = true }

# OpenTelemetry dependencies
opentelemetry = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
once_cell = { workspace = true }
serial_test = "3.2.0"
tokio = { workspace = true }
tower = { workspace = true }
# In-test broker WS server for broker_ws integration tests (WS-03).
axum = { workspace = true, features = ["ws"] }
