[package]
name = "brokkr-broker"
version = "0.0.0"
edition = "2021"

[lib]
name = "brokkr_broker"
path = "src/lib.rs"

[[bin]]
name = "brokkr-broker"
path = "src/bin.rs"

[dependencies]
# Internal crates
brokkr-models = { path = "../brokkr-models" }
brokkr-utils = { path = "../brokkr-utils" }

# OpenAPI dependencies
utoipa = { workspace = true, features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

# External dependencies
axum = { workspace = true }
hex = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
dotenv = { workspace = true }
hyper = { workspace = true }
once_cell = { workspace = true }
postgres = { workspace = true }
prefixed-api-key = { workspace = true }
prometheus = { workspace = true }
r2d2 = { workspace = true }
r2d2_postgres = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

# Templating dependencies
tera = { workspace = true }
jsonschema = { workspace = true }

# Encryption dependencies
aes-gcm = "0.10"

# OpenTelemetry dependencies
opentelemetry = { workspace = true }
tracing = { workspace = true }

# Kubernetes dependencies (for agent/resource operations, not config watching)
kube = { workspace = true, features = ["client", "runtime", "derive"] }
k8s-openapi = { workspace = true }
futures = "0.3"

# File watching for config hot-reload
notify = "7"
