[package]
name = "brokkr-broker"
version = "0.8.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Brokkr broker: the central control-plane API server for distributing Kubernetes objects across clusters."

[lib]
name = "brokkr_broker"
path = "src/lib.rs"

[[bin]]
name = "brokkr-broker"
path = "src/bin.rs"

[dependencies]
# Internal crates
brokkr-models = { path = "../brokkr-models" }
brokkr-utils = { path = "../brokkr-utils" }
brokkr-wire = { path = "../brokkr-wire" }

# OpenAPI dependencies
utoipa = { workspace = true, features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { workspace = true, features = ["axum"] }

# External dependencies
axum = { workspace = true, features = ["ws"] }
hex = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
diesel = { workspace = true }
diesel_migrations = { workspace = true }
dotenv = { workspace = true }
hyper = { workspace = true }
moka = { workspace = true }
once_cell = { workspace = true }
postgres = { workspace = true }
prefixed-api-key = { workspace = true }
prometheus = { workspace = true }
r2d2 = { workspace = true }
r2d2_postgres = { workspace = true }
rand = { workspace = true }
rand_core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
subtle = { workspace = true }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
url = { workspace = true }
uuid = { workspace = true }

# Templating dependencies
tera = { workspace = true }
jsonschema = { workspace = true }

# Encryption dependencies
aes-gcm = "0.10"

# OpenTelemetry dependencies
opentelemetry = { workspace = true }
tracing = { workspace = true }

# Kubernetes dependencies (for agent/resource operations, not config watching)
kube = { workspace = true, features = ["client", "runtime", "derive"] }
k8s-openapi = { workspace = true }
futures = "0.3"

# File watching for config hot-reload
notify = "7"

[dev-dependencies]
# Real-TCP WebSocket client for /internal/ws/agent integration tests (WS-02).
tokio-tungstenite = "0.24"
brokkr-wire = { path = "../brokkr-wire" }
# Serialize integration tests that contend on the shared DB's global webhook
# delivery queue (claim/release sweeps) so they don't race each other.
serial_test = { workspace = true }
