[package]
name = "brokkr-models"
version = "0.0.0"
edition = "2021"

[dependencies]
brokkr-utils = { path = "../brokkr-utils" }
diesel = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dotenv = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
diesel-derive-enum = { workspace = true }
serde_yaml = { workspace = true }


[dev-dependencies]
url = { workspace = true }
diesel_migrations = { workspace = true }
