[package]
name = "brokkr-models"
version = "0.0.0"
edition = "2021"

[dependencies]
# Internal crates
brokkr-utils = { path = "../brokkr-utils" }

# OpenAPI dependencies
utoipa = { workspace = true, features = ["axum_extras", "uuid", "chrono"] }

# External dependencies
chrono = { workspace = true }
diesel = { workspace = true }
diesel-derive-enum = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
diesel_migrations = { workspace = true }
url = { workspace = true }
