[package]
name = "brokkr-models"
version = "0.8.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Brokkr data models and database schema."

[dependencies]
# Internal crates
brokkr-utils = { path = "../brokkr-utils" }

# OpenAPI dependencies
utoipa = { workspace = true, features = ["axum_extras", "uuid", "chrono"] }

# External dependencies
chrono = { workspace = true }
diesel = { workspace = true }
diesel-derive-enum = { workspace = true }
dotenv = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
diesel_migrations = { workspace = true }
url = { workspace = true }
