[package]
name = "brokkr-utils"
version = "0.0.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
config = { workspace = true }
diesel = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true }
