[package]
name = "brokkr-utils"
version = "0.8.3"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared configuration, telemetry, and utility code for Brokkr."

[dependencies]
chrono = { workspace = true }
config = { workspace = true }
diesel = { workspace = true }
log = { workspace = true }
once_cell = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# OpenTelemetry dependencies
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry-semantic-conventions = { workspace = true }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true }

[dev-dependencies]
rand = { workspace = true }
tempfile = { workspace = true }
