[package]
name = "brokkr-wire"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Internal wire protocol for the broker↔agent WebSocket channel. Not a public API."
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
brokkr-models = { path = "../brokkr-models" }

chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
