[project]
name = "brokkr-sdk-contract-python"
version = "0.0.0"
description = "Contract tests that exercise the generated Python SDK against a running broker"
requires-python = ">=3.10"
dependencies = [
  "brokkr-client-generated",
  "pytest>=8.0",
]

[tool.pytest.ini_options]
testpaths = ["."]
addopts = "-v"
